[tool.poetry]
name = "stoppy"
version = "1.0.4"
description = "A precise and lightweight stopwatch built on top of `perf_counter`, which can be used as a replacement for `perf_counter` that returns absolute time starting from zero."
authors = ["morefigs"]
homepage = "https://github.com/morefigs/stoppy"
readme = "README.md"
packages = [{include = "stoppy"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
